<resources>
    <string name="app_name">Subastas Online</string>
    <string name="menu_home">Inicio</string>
    <string name="ventas">Vender</string>
    <string name="categorias">Categorías</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_otros">Otros</string>
    <string name="reportar">Reportar</string>
    <string name="email_header">xxxx@xxxx.xxx</string>
    <string name="name_header">Nombre</string>
    <string name="drawer_abierto">abierto</string>
    <string name="drawer_cerrado">cerrado</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
